--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Get Terraform latest version'
+name: 'Get latest Terraform version'
 description: 'A GitHub Action to get the latest Terraform version.'
 author: 'waniji'
 
@@ -10,7 +10,7 @@ inputs:
 
 outputs:
   latest_version:
-    description: 'Terraform latest version'
+    description: 'Latest Terraform version'
 
 runs:
   using: 'node20'
